--- a/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/about.html
+++ b/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/about.html
@@ -5,8 +5,15 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>About</h2>
                 <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
-                <p>Hello! I'm Alex, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for code quality. Also I'm a co-founder of pykod.com. I’m currently available for freelance work. If you have a project that you want to get started
-                    or think you need my help with something, then get in touch.</p>
+                <p class="sample-text">
+
+
+                    Hi, I'm Dilip Sahu, An <i>Open-Source </i><i>Python </i>,<i>Data Scientist</i>,<i>Data Analyst</i>,and <i>Full-Stack Web Developer</i>.My skills majorly include Machine Learning using Python and R programing language along with knowledge
+                    of Django,MySql,HTML,CSS,JavaScript,Angular,Tableau,Flask and AWS. I love open source, tech community, and building cool & fun things.<br>I had experienced in Hospitality and Retail Sector from MNC brands like McDonald's and BurgerKing
+                    in managerial decipline for 9 years. <br>
+                    <br> I'm a BSc in Information Technology Student and graduated from N.G Acharya and D.k Maratha college Chembur,Mumbai in the year 2013 and I am looking for full-time job opportunities.<br>
+                    <br> I love working and developing cool stuff with a great source.
+                </p>
                 <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
             </div>
         </div>
