--- a/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/hero.html
+++ b/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/hero.html
@@ -4,9 +4,9 @@
         <div class="row">
 
             <div class="col-md-6">
-                <h1>Alex Vidal</h1>
+                <h1>Dilip Sahu</h1>
                 <div class="page-scroll">
-                    <p class="job-title">Full Stack Developer</p>
+                    <p class="job-title">Python Developer | Data Scientist</p>
                     <a href="#contact" class="btn btn-fill ">Hire me</a>
                     <div class="clearfix visible-xxs"></div>
                     <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -14,7 +14,7 @@
             </div>
 
             <div class="col-md-6 text-right">
-                <img src="{% static 'img/alex-vidal.png' %}" alt="alex-vidal">
+                <img src="{% static 'img/dilip-sahu.jpg' %}" alt="dilip-sahu">
             </div>
 
         </div>
