--- a/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/services.html
+++ b/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/services.html
@@ -8,6 +8,15 @@
             </div>
             <div class="col-sm-4">
                 <div class="service">
+                    <img src="{% static 'img/consultancy.svg' %}" alt="Coding">
+                    <h4>Data Science</h4>
+                    <p>As a Data scientist, during my scientific journey I learned a lot of concepts and developed a lot of skills, such us : Expert Systems Developments, Knowledge-based system, Data integration, data analysis, Data mining and Text Mining,
+                        Machine learning</p>
+                </div>
+                <!-- /.service -->
+            </div>
+            <div class="col-sm-4">
+                <div class="service">
                     <img src="{% static 'img/front-end.svg' %}" alt="Front End Developer">
                     <h4>Front-end</h4>
                     <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
@@ -18,18 +27,11 @@
                 <div class="service">
                     <img src="{% static 'img/back-end.svg'%}" alt="Back End Developer">
                     <h4>Back-end</h4>
-                    <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                    <p>Utilising python frameworks such as Django and Flask. creating bespoke code, I've creating a full functionality website Projects on Car Dealer Shop, Tech-News Blog and also My personal portfolio from these back-end technologies</p>
                 </div>
                 <!-- /.service -->
             </div>
-            <div class="col-sm-4">
-                <div class="service">
-                    <img src="{% static 'img/consultancy.svg' %}" alt="Coding">
-                    <h4>Consultancy</h4>
-                    <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
-                </div>
-                <!-- /.service -->
-            </div>
+
         </div>
     </div>
 </section>
