--- a/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/skills.html
+++ b/MyPortfolioWebsite-Django/MyPortfolio/templates/MyPortfolio/skills.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section class="site-section section-skills">
+<section id="skills" class="site-section section-skills">
     <div class="container">
         <div class="text-center">
             <h3>My Skills</h3>
@@ -8,49 +8,49 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="skill">
-                    <h4>Html/css</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div>
-                        <!-- /.progress-bar -->
-                    </div>
-                    <!-- /.progress -->
-                </div>
-                <!-- /.skill -->
-                <div class="skill">
                     <h4>Python</h4>
                     <div class="progress">
+                        <div class="progress-bar" role="progressbar" data-transitiongoal="76"></div>
+                        <!-- /.progress-bar -->
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill -->
+                <div class="skill">
+                    <h4>Html/css</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" data-transitiongoal="95"></div>
+                        <!-- /.progress-bar -->
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill -->
+            </div>
+            <div class="col-md-4">
+                <div class="skill">
+                    <h4>MySql</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" data-transitiongoal="87"></div>
+                        <!-- /.progress-bar -->
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill -->
+                <div class="skill">
+                    <h4>JavaScript</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
+                        <!-- /.progress-bar -->
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill -->
+            </div>
+            <div class="col-md-4">
+                <div class="skill">
+                    <h4>R-Programing</h4>
+                    <div class="progress">
                         <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div>
-                        <!-- /.progress-bar -->
-                    </div>
-                    <!-- /.progress -->
-                </div>
-                <!-- /.skill -->
-            </div>
-            <div class="col-md-4">
-                <div class="skill">
-                    <h4>Javascript</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div>
-                        <!-- /.progress-bar -->
-                    </div>
-                    <!-- /.progress -->
-                </div>
-                <!-- /.skill -->
-                <div class="skill">
-                    <h4>Ruby</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div>
-                        <!-- /.progress-bar -->
-                    </div>
-                    <!-- /.progress -->
-                </div>
-                <!-- /.skill -->
-            </div>
-            <div class="col-md-4">
-                <div class="skill">
-                    <h4>Php</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div>
                         <!-- /.progress-bar -->
                     </div>
                     <!-- /.progress -->
