MyPortfolioinDjango work on skills and services by creating models and implemented

--- a/MyPortfolioInDjango/templates/includes/form.html
+++ b/MyPortfolioInDjango/templates/includes/form.html
@@ -4,6 +4,26 @@
 
         <h3>Contact</h3>
         <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
+        <div class="row">
+            <div class="col-xs-12 content">
+                <p><strong>Dilip Sahu</strong><br />
+                    <span class="e-mail">sahud048@gmail.com</span></p>
+                <p>As a data expert, I know exactly how you can use data optimally within your business. Based on your objectives, we will make a plan to reach the right insight.</p>
+            </div>
+            <div class="col-xs-12 col-sm-12  text-justify">
+
+                <p><strong>I am available for:</strong></p>
+                <ul>
+                    <li>Data analysis</li>
+                    <li>Data analytics (prediction models, segmentations)</li>
+                    <li>Data visualisation (infographics, dashboards)</li>
+                    <li>Web Development (Rapid Development, Secure, Scalable, Fully loaded)</li>
+                    <li>Training and workshops (start with data analysis, how to answer questions with data, hands-on SQL, hands-on R)</li>
+                    <li>Presentations (storytelling, how to present data, how do other businesses use data?)</li>
+                </ul>
+            </div>
+        </div>
+        <br>
         <form>
             <div class="row">
                 <div class="col-sm-6">
