--- a/MyPortfolioInDjango/templates/includes/hero.html
+++ b/MyPortfolioInDjango/templates/includes/hero.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="col-md-6 text-right">
-                <img src="{% static 'img/alex-vidal.png' %}" alt="dilip-sahu">
+                <img src="{% static 'img/passport1.jpg' %}" alt="dilip-sahu">
             </div>
 
         </div>
