--- a/MyPortfolioInDjango/templates/includes/services.html
+++ b/MyPortfolioInDjango/templates/includes/services.html
@@ -7,30 +7,18 @@
                 <h3>What i do</h3>
                 <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
             </div>
-            <div class="col-sm-4">
+
+
+            {% for service in services %}
+            <div class="col-sm-6 ">
                 <div class="service">
                     <img src="{% static 'img/front-end.svg' %}" alt="Front End Developer">
-                    <h4>Front-end</h4>
-                    <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                    <h4>{{service.title}}</h4>
+                    <p>{{service.description}}</p>
                 </div>
                 <!-- /.service -->
             </div>
-            <div class="col-sm-4">
-                <div class="service">
-                    <img src="{% static 'img/back-end.svg' %}" alt="Back End Developer">
-                    <h4>Back-end</h4>
-                    <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
-                </div>
-                <!-- /.service -->
-            </div>
-            <div class="col-sm-4">
-                <div class="service">
-                    <img src="{% static 'img/consultancy.svg' %}" alt="Coding">
-                    <h4>Consultancy</h4>
-                    <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
-                </div>
-                <!-- /.service -->
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
