MyPortfolioInDjango create portfolio model and implement in porfolio.html and models,html page

--- a/MyPortfolioInDjango/templates/includes/portfolio.html
+++ b/MyPortfolioInDjango/templates/includes/portfolio.html
@@ -7,78 +7,20 @@
             <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
         </div>
         <div class="row">
-            <div class="col-md-4 col-xs-6">
+            {% for portfolio in portfolios %}
+            <div class="col-md-4 col-xs-6 float-sm-left">
                 <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-1.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                    <img src="{{portfolio.image.url}}" class="img-res" alt=" ">
+                    <div class="portfolio-item-info ">
+                        <h4 style="font-size:large;">{{portfolio.title}} </h4>
+                        <a href="#" data-toggle="modal" data-target="#{{portfolio.id}}"><span class="glyphicon glyphicon-eye-open "></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-link "></span></a>
                     </div>
                     <!-- /.portfolio-item-info -->
                 </div>
                 <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-2.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                    </div>
-                    <!-- /.portfolio-item-info -->
-                </div>
-                <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-3.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                    </div>
-                    <!-- /.portfolio-item-info -->
-                </div>
-                <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-4.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                    </div>
-                    <!-- /.portfolio-item-info -->
-                </div>
-                <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-5.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                    </div>
-                    <!-- /.portfolio-item-info -->
-                </div>
-                <!-- /.portfolio-item -->
-            </div>
-            <div class="col-md-4 col-xs-6">
-                <div class="portfolio-item">
-                    <img src="{% static 'img/portfolio-6.jpg' %}" class="img-res" alt="">
-                    <div class="portfolio-item-info">
-                        <h4>Project Title</h4>
-                        <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                    </div>
-                    <!-- /.portfolio-item-info -->
-                </div>
-                <!-- /.portfolio-item -->
-            </div>
+            </div> {% endfor %}
+
         </div>
     </div>
 </section>
