MyPortfolio contact section modified and carzone-project use authentication and improve dynamic title on page change

--- a/MyPortfolioInDjango/templates/base.html
+++ b/MyPortfolioInDjango/templates/base.html
@@ -77,7 +77,7 @@
         <!-- /.section-counters -->
 
 
-        {% include 'includes/form.html' %}
+        {% include 'includes/contact.html' %}
         <!-- /.section-form -->
 
     </main>
