Carzone-django-project Contact form accept user input and send mail to admin

--- a/CarZone-Django-Project/templates/pages/about.html
+++ b/CarZone-Django-Project/templates/pages/about.html
@@ -60,8 +60,8 @@
             <div class="col-xl-7 col-lg-6 align-self-center">
                 <div class="best-used-car">
                     <h3>Welcome to <span>Car Zone</span></h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has</p>
-                    <p class="mb-0">electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker</p>
+                    <p>At CARZONE we make selling a car easy, swift, fair and quick experience. As the largest auto-tech company in this industrial domain, we offer an extremely efficient and reliable way to car owners to sell their vehicle at the fair market price. This is done by getting the real value of the second-hand cars for sale. </p>
+                    <p class="mb-0">Selling used cars is not an easy task. If you have to sell a car, normally it takes almost 20-30 painful attempts to put that used car for sale at the correct valuation. You meet multiple buyers to sell your old car and most of the time face last-minute buyer back-offs and delayed payments. After all this hassle, if you manage to find a good buyer of second-hand cars, there are chances you wait for several months to get the RC transfer. This is where CARZONE has stepped in. We make selling used cars really convenient. We buy any old car, irrespective of the condition, model, state of registration and make; while not compromising on the price. This simply translates into providing our customers with a complete second-hand cars solution. All you have to do is book an appointment with any of our branches for a free inspection to get your used car valuation.  Then your car is put up for a live auction, where thousands of authorized buyers participate to buy the car. </p>
                 </div>
             </div>
         </div>
