--- a/CarZone-Django-Project/templates/pages/home.html
+++ b/CarZone-Django-Project/templates/pages/home.html
@@ -110,7 +110,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Featured <span>Cars</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>What's trending? Check out the most sought after cars</p>
         </div>
         <!-- Slick slider area start -->
         <div class="slick-slider-area clearfix">
@@ -201,7 +201,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Latest <span>Cars</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Know everything about the latest cars</p>
         </div>
         <div class="row">
           {% for car in all_cars %}
@@ -292,7 +292,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Executive <span>Team</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <p>Our most dynamic and much ethuthiastic executive team </p>
         </div>
         <!-- Slick slider area start -->
         <div class="slick-slider-area clearfix">
