--- a/MyPortfolioInDjango/templates/base.html
+++ b/MyPortfolioInDjango/templates/base.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Dilip Sahu Portfolio</title>
+    <title>Dilip Sahu - Portfolio</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
     {% include 'includes/header.html' %}
     <!-- /#header -->
 
@@ -75,6 +74,7 @@
 
         {% include 'includes/counters.html' %}
         <!-- /.section-counters -->
+
 
 
         {% include 'includes/contact.html' %}
