--- a/MyPortfolioInDjango/templates/includes/contact.html
+++ b/MyPortfolioInDjango/templates/includes/contact.html
@@ -28,19 +28,29 @@
         <div class="col-xs-12 content">
             <p><strong>Contact Form</strong></p>
         </div>
-        <form>
-            <div class="row">
-                <div class="col-sm-6">
+
+        <form action="{% url 'home' %}" method="POST">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="form-group col-sm-6">
                     <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
                 </div>
-                <div class="col-sm-6">
+                <div class="form-group col-md-3">
                     <input type="email" name="email" class="form-control" placeholder="Email" required>
                 </div>
-                <div class="col-sm-12">
-                    <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
+                <div class="form-group col-md-3">
+                    <input type="tel" name="phone" class="form-control" placeholder="Contact" pattern="[0-9]{10}" required>
+                    <small>Format: 10-digit only</small>
                 </div>
+
+                <div class="form-group col-md-12">
+                    <textarea name="message" id="" class="form-control" placeholder="Message" required></textarea>
+                </div>
+
+
             </div>
-            <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
-        </form>
+    </div>
+    <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
+    </form>
     </div>
 </section>
